# DrawingRenamer

./: .gitignore  index.html  main.js  neutralino.config.json  package.json  preload.js  renamer.js  renamer.ps1  renderer.js  styles.css
renamer_rust/: Cargo.toml  tauri.conf.json
renamer_rust/src/: main.rs
