[package]
name = "drawing_renamer"
version = "0.1.0"
edition = "2021"

[package]
name = "drawing_renamer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"], optional = true }
pdf-extract = "0.6"
regex = "1.10"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["shell-open"] }

[features]
cli-only = ["clap"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
